# env_switch_tool

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  study.md  tailwind.config.js  vite.config.ts
.cursor/rules/: cross-platform.mdc  ddd-architecture.mdc  performance.mdc  project-conventions.mdc  tdd-workflow.mdc
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  pr-review.yml  release.yml  security-audit.yml  stale.yml
crates/application/: Cargo.toml
crates/application/src/: dto.rs  lib.rs  port.rs  tests.rs
crates/application/src/use_case/: disable_group.rs  enable_group.rs  export_import.rs  manage_group.rs  manage_profile.rs  mod.rs  sync_environment.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/src/commands/: mod.rs
crates/cli/tests/: cli_test.rs
crates/domain/: Cargo.toml
crates/domain/src/: error.rs  event.rs  lib.rs  repository.rs
crates/domain/src/model/: env_group.rs  env_variable.rs  group_kind.rs  hosts_entry.rs  managed_group.rs  mod.rs  priority.rs  profile.rs
crates/domain/src/service/: group_policy.rs  mod.rs
crates/domain/tests/: env_group_test.rs  env_variable_test.rs  group_policy_test.rs  hosts_entry_test.rs  managed_group_test.rs  profile_test.rs
crates/infrastructure/: Cargo.toml
crates/infrastructure/src/: lib.rs
crates/infrastructure/src/hosts/: elevation.rs  mod.rs  writer.rs
crates/infrastructure/src/persistence/: mod.rs  toml_repository.rs
crates/infrastructure/src/platform/: linux.rs  macos.rs  windows.rs
crates/infrastructure/src/shell/: hook_generator.rs  mod.rs  state_writer.rs
crates/infrastructure/tests/: state_writer_test.rs  toml_repository_test.rs
docs/: ARCHITECTURE.md  HOSTS_PROFILE.md  USER_GUIDE.md  githubAction.md
src/: App.tsx  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src-tauri/windows/: hooks.nsh
src/components/: CreateGroupModal.tsx  GroupEditor.tsx  GroupList.tsx  ProfileSection.tsx  SettingsPanel.tsx  StatusBar.tsx
src/hooks/: useTheme.ts
src/i18n/: index.ts
