[package]
name = "envtools-application"
version.workspace = true
edition.workspace = true

[dependencies]
envtools-domain = { path = "../domain" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
mockall = "0.14"
tokio = { version = "1", features = ["rt", "macros"] }
