[package]
name = "envtools-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "envtools"
path = "src/main.rs"

[dependencies]
envtools-domain = { path = "../domain" }
envtools-application = { path = "../application" }
envtools-infrastructure = { path = "../infrastructure" }
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde_json = "1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
